--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-Data
-- include initial node
-
-Presentation
-- critical line
-- features flip
 - intesting dates
+  - releases
+  - conferences
+- labels
+  - # criticals
+  - # total
+  - scale rules
